<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Linha 1 -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:text="@string/um"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/exemplo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/de_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <!-- Linha 2-->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:text="@string/um"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:text="@string/exemplo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:text="@string/de_peso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
    <!-- Linha 3 -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:text="@string/um"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>
        <Button
            android:text="@string/exemplo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"/>
        <Button
            android:text="@string/de_peso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>
    </LinearLayout>
</LinearLayout>
